Change `container_db` to a boolean

--- a/roles/db-create/templates/dbca.rsp.sh.j2
+++ b/roles/db-create/templates/dbca.rsp.sh.j2
@@ -7,7 +7,7 @@ cp "{{ oracle_home }}/assistants/dbca/dbca.rsp" "${response_file}"
 sed -i '/^\#\{0,\} \{0,\}gdbName \{0,\}=/I                   s~\#\{0,\} \{0,\}gdbName \{0,\}=.*~gdbName='{{ db_name }}'.'{{ db_domain }}'~I'                        "${response_file}"
 sed -i '/^\#\{0,\} \{0,\}sid \{0,\}=/I                       s~\#\{0,\} \{0,\}sid \{0,\}=.*~sid='{{ db_name }}'~I'                                                  "${response_file}"
 sed -i '/^\#\{0,\} \{0,\}databaseConfigType \{0,\}=/I        s~\#\{0,\} \{0,\}databaseConfigType \{0,\}=.*~databaseConfigType='{{ db_config_type }}'~I'             "${response_file}"
-sed -i '/^\#\{0,\} \{0,\}createAsContainerDatabase \{0,\}=/I s~\#\{0,\} \{0,\}createAsContainerDatabase \{0,\}=.*~createAsContainerDatabase='{{ container_db }}'~I' "${response_file}"
+sed -i '/^\#\{0,\} \{0,\}createAsContainerDatabase \{0,\}=/I s~\#\{0,\} \{0,\}createAsContainerDatabase \{0,\}=.*~createAsContainerDatabase='{{ container_db | string }}'~I' "${response_file}"
 sed -i '/^\#\{0,\} \{0,\}numberOfPDBs \{0,\}=/I              s~\#\{0,\} \{0,\}numberOfPDBs \{0,\}=.*~numberOfPDBs='{{ pdb_count }}'~I'                              "${response_file}"
 sed -i '/^\#\{0,\} \{0,\}pdbName \{0,\}=/I                   s~\#\{0,\} \{0,\}pdbName \{0,\}=.*~pdbName='{{ pdb_prefix }}'~I'                                       "${response_file}"
 sed -i '/^\#\{0,\} \{0,\}emConfiguration \{0,\}=/I           s~\#\{0,\} \{0,\}emConfiguration \{0,\}=.*~emConfiguration=NONE~I'                                     "${response_file}"
